--- a/Employment-guide/src/Test/index.scss
+++ b/Employment-guide/src/Test/index.scss
@@ -66,5 +66,62 @@ $foreground: #2d264b;
             color: $bg;
         }
     }
+
+
+    .footer {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    button {
+        background: linear-gradient(0deg, $primary 0.03%, $accent);
+        border-radius: 9px;
+        font-size: 18px;
+        color: $bg;
+        padding: 10px 42px;
+        outline: none;
+        border: none;
+        margin-top: 15px;
+        cursor: pointer;
+
+        &:disabled {
+            background: $bg-accent;
+            color: $disabled;
+            cursor: not-allowed;
+        }
+    }
+
+    .result {
+        text-align: center;
+
+        h3 {
+            font-size: 24px;
+            letter-spacing: 1.4px;
+            text-align: center;
+        }
+
+        p {
+            font-size: 16px;
+            font-weight: 500;
+
+            span {
+                color: $primary;
+                font-size: 22px;
+            }
+        }
+
+        table {
+            width: 50%;
+            text-align: left;
+            margin: 50px auto 20px;
+            border-collapse: collapse;
+
+            tr {
+                border: 1px solid;
+            }
+        }
+    }
+
 }
 
+//Continue at 42:39mins
